--- a/kas/iot2050.yml
+++ b/kas/iot2050.yml
@@ -48,6 +48,9 @@ repos:
       13-fix-isar-build-cmd:
         repo: meta-iot2050
         path: isar-patches/0013-image-Fix-evaluation-of-complex-ISAR_RELEASE_CMD-val.patch
+      14-add-libubootenv:
+        repo: meta-iot2050
+        path: isar-patches/0001-u-boot-add-libubootenv.patch
 
 bblayers_conf_header:
   standard: |
@@ -60,3 +63,5 @@ local_conf_header:
     CONF_VERSION = "1"
   crossbuild: |
     ISAR_CROSS_COMPILE = "1"
+  u-boot-tools: |
+    U_BOOT_TOOLS_PACKAGE = "1"
